# sqaaas-reporting-plugins

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  setup.cfg  test-requirements.txt
.sqa/: config.yml  docker-compose.yml  script.pytest.sh
qc_ALL_boolean/: README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
qc_ALL_boolean/report2sqaaas_plugins_boolean/: main.py
qc_ALL_boolean/tests/: test_validator.py
qc_ALL_jenkins_exit_status/: CONTRIBUTING.md  README.md  requirements.txt  setup.py
qc_ALL_json_not_empty/: README.md  requirements.txt  setup.py
qc_ALL_no_output_parsing/: README.md  setup.py
qc_doc_find_doc_files/: README.md  requirements.txt  setup.py  test-requirements.txt
qc_doc_find_readme/: README.md  requirements.txt  setup.py
qc_doc_markdownlint/: README.md  setup.py  test-requirements.txt
qc_doc_no_output_parsing/: README.md  setup.py
qc_fair_fairEva/: README.md  Thesaurus.csv  requirements.txt  setup.py  test-requirements.txt
qc_fair_fairEvaluator/: README.md  setup.py
qc_fair_fuji/: README.md  fuji.example.json  requirements.txt  setup.py  test-requirements.txt
qc_lic_licensee/: requirements.txt  setup.py  test-requirements.txt
qc_met_cff/: README.md  requirements.txt  setup.py  test-requirements.txt
qc_sec_bandit/: README.md  requirements.txt  setup.py  test-requirements.txt
qc_sec_goblint/: CONTRIBUTING.md  README.md  goblin_output.txt  setup.cfg  setup.py  test-requirements.txt
qc_sec_gosec/: README.md  requirements.txt  setup.py  test-requirements.txt
qc_sty_Ophidia/: README.md  requirements.txt  setup.py
qc_uni_pytest/: CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
qc_uni_pytest/report2sqaaas_plugins_pytest/: main.py
qc_uni_pytest/tests/: pytest.out.json  test_validator.py
(+67 files in other folders)
