[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[isort]
profile = black

[flake8]
max-line-length = 88
# E501 ignored for REUSE licensing headers
extend-ignore = E203, E704, E501
